<resources>
    <string name="app_name">PayBike</string>
    <string name="display_app_name">PAY•BIKE</string>
    <string name="title_activity_bike_feed">BikeFeedActivity</string>
    <string name="title_activity_bike_details">BikeDetailsActivity</string>
    <string name="bike_image">BikeImage</string>
    <string name="bike_placeholder_name">Skeppshult bike</string>
    <string name="bike_description">Bike for day rental in central Gothenburg. Helmet and lights included in rent. Pick up at the Central Station. </string>
    <string name="bike_placeholder_city">Gothenburg</string>
    <string name="bike_placeholder_price">$9/h</string>
    <string name="rent_bike_btn">Rent this bike</string>
    <string name="search_hint">Seach for rentables...</string>

    // Strings used in main menu
    <string name="view_all_bikes">Browse Bikes</string>
    <string name="view_requests">View Requests</string>
    <string name="add_new_bike">Add New Bike</string>
    <string name="view_my_bikes">My Bikes</string>
    <string name="sign_out">Sign Out</string>

    // Strings used in activity_main.xml
    <string name="find_bike_btn_text">Find a bike</string>
    <string name="email_text">E-mail address</string>
    <string name="password_text">Password</string>
    <string name="register_user"><u>Register new user</u></string>

    // Strings used in activity_add_bike.xml
    <string name="add_bike_instruction">Tell us about your bike... </string>
    <string name="name_text">Title</string>
    <string name="name_hint">Mountainbike with Green Stripes</string>
    <string name="address_text">Location</string>
    <string name="street_hint">Bikeroad 10</string>
    <string name="city">City</string>
    <string name="zipcode">Zipcode</string>
    <string name="street">Street</string>
    <string name="zipcode_hint">42215</string>
    <string name="city_hint">Stockholm</string>
    <string name="description_text">Description</string>
    <string name="description_hint">It has two wheels and a lock.</string>
    <string name="price_text">Hourly rate</string>
    <string name="price_hint">9</string>
    <string name="post_bike_btn">Post bike</string>

    // Strings used in fragment_register_user.xml
    <string name="register_user_text">Register New User</string>
    <string name="user_name">Name</string>
    <string name="repeat_password">Repeat Password</string>
    <string name="register_btn">Register</string>

    // Strings used in fragment_send_request.xml
    <string name="request">When do you wish to rent this bike?</string>
    <string name="start_time">From</string>
    <string name="end_time">To</string>
    <string name="send_request_btn">Send Request</string>
    <string name="total_price">Total price</string>


    // String used in no_available_rentables.xml
    <string name="no_bikes">You do not have any registered bikes yet. Use the menu to add one!</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
