<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constraintLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:theme="@style/AppTheme.NoActionBar"
    android:background="@color/colorWhite"
    tools:context=".activities.AddBikeActivity">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/appBarLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:elevation="0dp"
            android:theme="@style/ToolbarTheme"
            app:titleTextColor="@color/colorAccentGreen">

            <TextView
                android:id="@+id/toolbarTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:letterSpacing="0.5"
                android:text="@string/display_app_name"></TextView>

        </android.support.v7.widget.Toolbar>

    </android.support.design.widget.AppBarLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/appBarLayout">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingBottom="20dp"
            android:paddingLeft="40dp"
            android:paddingRight="40dp"
            android:paddingTop="24dp">


            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="24dp"
                android:text="@string/add_bike_instruction"
                android:textAlignment="viewStart"
                android:textSize="24sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="0dp"
                android:text="@string/name_text"
                android:textAllCaps="true"
                android:textColor="@color/colorBrown"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/nameText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/name_hint"
                android:inputType="textPersonName"
                android:textAlignment="viewStart" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/address_text"
                android:textAllCaps="true"
                android:textColor="@color/colorBrown"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView16"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/street"
                android:textColor="@color/colorBrown" />

            <EditText
                android:id="@+id/street"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/street_hint"
                android:inputType="textPostalAddress" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/textView13"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/zipcode"
                        android:textAllCaps="false"
                        android:textColor="@color/colorBrown" />

                    <EditText
                        android:id="@+id/zipcode"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:ems="10"
                        android:hint="@string/zipcode_hint"
                        android:inputType="number" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="0.6"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/textView15"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/city"
                        android:textAllCaps="false"
                        android:textColor="@color/colorBrown" />

                    <EditText
                        android:id="@+id/city"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:ems="10"
                        android:hint="@string/city_hint"
                        android:inputType="text" />

                </LinearLayout>
            </LinearLayout>

            <TextView
                android:id="@+id/textView5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/description_text"
                android:textAllCaps="true"
                android:textColor="@color/colorBrown"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/descriptionText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/description_hint"
                android:inputType="textMultiLine" />

            <TextView
                android:id="@+id/hourly_rate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/price_text"
                android:textAllCaps="true"
                android:textColor="@color/colorBrown"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView6"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="right|center_vertical"
                    android:text="$"
                    android:textSize="20sp" />

                <EditText
                    android:id="@+id/priceText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:hint="@string/price_hint"
                    android:inputType="numberDecimal" />

                <TextView
                    android:id="@+id/textView7"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="12"
                    android:gravity="center_vertical"
                    android:text="/h"
                    android:textSize="18sp" />
            </LinearLayout>

            <TextView
                android:id="@+id/textView8"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="Upload Image"
                android:textAllCaps="true"
                android:textColor="@color/colorBrown"
                android:textStyle="bold" />

            <ImageButton
                android:id="@+id/chooseImage"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="16dp"
                android:adjustViewBounds="true"
                android:background="@color/colorWhite"
                android:scaleType="fitXY"
                app:srcCompat="@mipmap/add_photo" />

            <Button
                android:id="@+id/postRentableBtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="4dp"
                android:layout_marginLeft="60dp"
                android:layout_marginRight="60dp"
                android:layout_marginTop="24dp"
                android:background="@drawable/btn_round_corners"
                android:defaultFocusHighlightEnabled="true"
                android:elevation="0dp"
                android:paddingBottom="16dp"
                android:paddingTop="12dp"
                android:text="@string/post_bike_btn"
                android:textColor="@android:color/white"
                android:textSize="18sp" />

        </LinearLayout>

    </ScrollView>

</android.support.constraint.ConstraintLayout>