<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@android:color/white"
    android:orientation="horizontal"
    android:padding="8dp">

    <ImageView
        android:id="@+id/bikeImage"
        android:layout_width="0dp"
        android:layout_height="100dp"
        android:layout_marginBottom="4dp"
        android:layout_marginRight="8dp"
        android:layout_weight="1"
        android:contentDescription="@string/bike_image"
        android:scaleType="centerCrop"
        app:srcCompat="@mipmap/add_photo" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="vertical">

        <TextView
            android:id="@+id/city"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:maxLines="1"
            android:text="@string/bike_placeholder_city"
            android:textAllCaps="true"
            android:textColor="@color/colorBrown"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/bikeName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:fontFamily="@font/opensans_semibold"
            android:maxLines="1"
            android:text="@string/bike_placeholder_name"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/price"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLines="1"
            android:text="@string/bike_placeholder_price"
            android:textSize="16sp" />
    </LinearLayout>

</LinearLayout>
